Pattern binding variable not recognized in poly conditional operator expression
 * Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3222