@@ -15,7 +15,6 @@ package org.eclipse.jdt.core.tests.compiler.regression;
 import java.util.Map;
 import junit.framework.Test;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
-import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
 
 public class InstanceofPrimaryPatternTest extends AbstractRegressionTest {
 
@@ -35,26 +34,7 @@ public class InstanceofPrimaryPatternTest extends AbstractRegressionTest {
 	public InstanceofPrimaryPatternTest(String testName){
 		super(testName);
 	}
-	// Enables the tests to run individually
-	protected Map<String, String> getCompilerOptions(boolean preview) {
-		Map<String, String> defaultOptions = super.getCompilerOptions();
-		if (this.complianceLevel >= ClassFileConstants.getLatestJDKLevel()
-				&& preview) {
-			defaultOptions.put(CompilerOptions.OPTION_EnablePreviews, CompilerOptions.ENABLED);
-		}
-		return defaultOptions;
-	}
 
-	protected Map<String, String> getCompilerOptions() {
-		return getCompilerOptions(true);
-	}
-
-	@Override
-	protected void runConformTest(String[] testFiles, String expectedOutput, Map<String, String> customOptions) {
-		if(!isJRE17Plus)
-			return;
-		runConformTest(testFiles, expectedOutput, customOptions, new String[] {"--enable-preview"}, JAVAC_OPTIONS);
-	}
 	protected void runNegativeTest(
 			String[] testFiles,
 			String expectedCompilerLog,
@@ -71,7 +51,6 @@ public class InstanceofPrimaryPatternTest extends AbstractRegressionTest {
 		runner.runNegativeTest();
 	}
 	public void test001() {
-		Map<String, String> options = getCompilerOptions(true);
 		runConformTest(
 			new String[] {
 				"X.java",
@@ -86,8 +65,7 @@ public class InstanceofPrimaryPatternTest extends AbstractRegressionTest {
 				"	}\n" +
 				"}\n",
 			},
-			"Hello World!",
-			options);
+			"Hello World!");
 	}
 	public void test002() {
 		String expectedDiagnostics = this.complianceLevel < ClassFileConstants.JDK20 ?
@@ -669,5 +647,90 @@ public class InstanceofPrimaryPatternTest extends AbstractRegressionTest {
 			Incompatible conditional operand types String and Example<String>
 			----------
 			""");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3222
+	// [Patterns][Ternary] Pattern binding variable not recognized in poly conditional operator expression
+	public void testIssue3222() {
+		runConformTest(
+			new String[] {
+				"X.java",
+				"""
+				public class X {
+
+					interface I  {
+						int foo();
+					}
+
+					static void foo(I i) {
+				        System.out.println(i.foo());
+				    }
+
+					public static void main(String[] args) {
+						foo(args instanceof String [] argv ? () -> argv.length + 13  : () -> 42);
+					}
+
+				}
+				"""
+			},
+			"13");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3222
+	// [Patterns][Ternary] Pattern binding variable not recognized in poly conditional operator expression
+	public void testIssue3222_2() {
+		runConformTest(
+			new String[] {
+				"X.java",
+				"""
+				public class X {
+
+					interface I  {
+						int foo();
+					}
+
+					static void foo(I i) {
+				        System.out.println(i.foo());
+				    }
+
+					public static void main(String[] args) {
+						foo(!(args instanceof String [] argv) ? () -> 42 : () -> argv.length + 13);
+					}
+
+				}
+				"""
+			},
+			"13");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3222
+	// [Patterns][Ternary] Pattern binding variable not recognized in poly conditional operator expression
+	public void testIssue3222_3() {
+		runConformTest(
+			new String[] {
+				"X.java",
+				"""
+				import java.util.function.Supplier;
+
+				public class X {
+				  interface I {
+				    int foo(Supplier<Integer> arg);
+				    default int foo(Object arg) {
+				      return 13;
+				    }
+				  }
+				  public X() {
+				    super();
+				  }
+				  public static void main(String[] argv) {
+				    int i = ((I) (x) -> {
+				  return x.get();
+				}).foo((argv instanceof String [] args ? () -> args.length + 42 : (Supplier<Integer>) null));
+				    System.out.println(i);
+				  }
+				}
+				"""
+			},
+			"42");
 	}
 }
